ch41/pod-step1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubebook-bad
spec:
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
