ch41/pod-step2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubebook-bad
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      resources:
        limits: {cpu: 100m, memory: 64Mi}
