ch41/vpol.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: kubebook-allowed-registries
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: kubebook-ch41-kyv
  validations:
    - expression: "object.spec.containers.all(c, c.image.startsWith('registry.k8s.io/'))"
      message: "Images must come from registry.k8s.io."
